2003-12-21  Masatake YAMATO  <jet@gyve.org>

	* w3m.el (w3m-mode): Small doc fix.
	(w3m-relationship-estimate-rules): Relax the regular expression to
	detect result pages of Google.

2003-12-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-safe-toggle-inline-image): New function.
	(w3m-toggle-inline-images): Revoke the recent changes.
	(w3m-safe-toggle-inline-images): New function.
	(w3m-safe-view-this-url): Doc fix.
	(w3m-minor-mode-command-alist): Use `w3m-safe-toggle-inline-image'
	and `w3m-safe-toggle-inline-images'.

	* w3m-util.el (w3m-find-w3m-buffer): Abolish.
	(w3m-with-w3m-buffer): Abolish.

	* mew-w3m.el (mew-w3m-view-inline-image): Revert.

	* attic/vm-w3m.el (vm-w3m-safe-toggle-inline-images): New function.

2003-12-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-toggle-inline-images): Ignore `w3m-safe-url-regexp'
	when the prefix argument is given.

	* w3m-util.el (w3m-find-w3m-buffer): Bind `w3m-safe-url-regexp' to
	the value specified peculiarly by each MUA.
	(w3m-with-w3m-buffer): Ditto.

	* mew-w3m.el (mew-w3m-view-inline-image): Don't bind
	`w3m-safe-url-regexp' there.

2003-12-19  Hideyuki SHIRAI  <shirai@meadowy.org>

	* mew-w3m.el (mew-w3m-view-inline-image): Fix last change.

2003-12-18  Hideyuki SHIRAI  <shirai@meadowy.org>

	* mew-w3m.el (mew-w3m-view-inline-image): Use `w3m-toggle-inline-images'.
	(mew-mime-text/html-w3m): Put the `w3m-images' text property in
	the message buffer.

	* w3m-util.el (w3m-find-w3m-buffer): Fix for Mew.

2003-12-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-toggle-inline-images): Wrap it with
	`w3m-with-w3m-buffer'.

	* w3m-util.el (w3m-find-w3m-buffer): New function.
	(w3m-with-w3m-buffer): New macro.

2003-12-13  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-antenna.el (w3m-antenna-string): Renamed from
	`string-with-default'.
	(w3m-antenna-string-create): Renamed from
	`string-with-default-value-create'.
	(w3m-antenna-sites): Change its customize spec.
